fix: shift changes of navbar

--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,13 @@ button:hover,
 button:hover::before {
   animation: animate 0.5s infinite linear;
 }
+
+body.menu-open nav {
+  /* overflow-y: scroll; */
+  padding-right: 16.1px; /* Adjust this value if needed to match the width of your scrollbar */
+}
+
+/* Optional: Prevent horizontal scrolling when menu is open */
+body.menu-open nav {
+  overflow-x: hidden;
+}
